fixed discover page flickering

--- a/src/styles/discover.styl
+++ b/src/styles/discover.styl
@@ -1,3 +1,6 @@
+.disco.content
+  z-index 2
+
 .discoverChannels
   padding 0 8px
   h1
